syntax = "proto3";

package crspb;

option go_package = "./pkg/crspb";

import "google/protobuf/timestamp.proto";

service ChangeRequestService {
  // coming from clients, requesting things, via the BFFfs
  rpc CreateTMTProject(CreateTMTProjectRequest) returns (CreateTMTProjectResponse) {}

  // general rpcs
  rpc GetChangeRequest(GetChangeRequestRequest) returns (ChangeRequest) {}
  rpc GetAllChangeRequests(GetAllChangeRequestsRequest) returns (ChangeRequestList) {}
  
  // coming from github webhooks/github-actions
  rpc ReportPullRequestClosed(ReportPullRequestClosedRequest) returns (ReportPullRequestClosedResponse) {}
  rpc ReportDefaultBranchUpdated(ReportDefaultBranchUpdatedRequest) returns (ReportDefaultBranchUpdatedResponse) {}
  rpc ReportConflictResolved(ReportPullRequestClosedRequest) returns (ReportPullRequestClosedResponse) {}
  
  // coming from the job that runs in cloud run, no need to expose these via BFF
  rpc UpdateRebaseJobStatus(UpdateJobStatusRequest) returns (UpdateJobStatusResponse) {}
  rpc UpdateTMTJobStatus(UpdateJobStatusRequest) returns (UpdateJobStatusResponse) {}
  rpc GetTMTJob(GetTMTJobRequest) returns (TMTJob) {}
  rpc GetRebaseJob(GetRebaseJobRequest) returns (RebaseJob) {}
  

}

message CreateTMTProjectRequest {
  string project_name = 1;
  string orchestration_repository = 2;
  string application = 3;
  string dv01_domain = 4;
  string user_email = 5;
}

message CreateTMTProjectResponse {
  bool success = 1;
  string error_message = 2;
  int32 change_request_id = 3;
}

enum ChangeRequestType {
  UNKNOWN = 0;
  TMT = 1;
}

message ChangeRequest {
  int32 id = 1;
  string branch_name = 2;
  string pull_request_url = 3;
  string pull_request_id = 4;
  string created_by = 5;
  ChangeRequestType type = 6;
}

message GetChangeRequestRequest {
  int32 change_request_id = 1;
}

message GetAllChangeRequestsRequest {}

message ChangeRequestList {
  repeated ChangeRequest change_requests = 1;
}

message GetTMTJobRequest {
  int32 job_id = 1;
}

enum JobStatus {
  PENDING = 0;
  COMPLETED = 1;
  FAILED = 2;
}

message TMTJob {
  int32 id = 1;
  string project_name = 2;
  string orchestration_repository = 3;
  string application = 4;
  string dv01_domain = 5;
  string user_email = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp completed_at = 8;
  JobStatus status = 9;
  string status_message = 10;
}

message GetRebaseJobRequest {
  int32 job_id = 1;
}

message RebaseJob {
  int32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp completed_at = 3;
  JobStatus status = 4;
  string status_message = 5;
}

message ReportPullRequestClosedRequest {
  string pull_request_id = 2;
}

message ReportPullRequestClosedResponse {
  bool success = 1;
  string error_message = 2;
}

message ReportDefaultBranchUpdatedRequest {}

message ReportDefaultBranchUpdatedResponse {
  bool success = 1;
  string error_message = 2;
}

message ReportConflictResolvedRequest {
  int32 change_request_id = 1;
  string pull_request_id = 2;
}

message ReportConflictResolvedResponse {
  bool success = 1;
  string error_message = 2;
}

message UpdateJobStatusRequest {
  int32 job_id = 1;
  JobStatus status = 2;
  string status_message = 3;
}

message UpdateJobStatusResponse {
  bool success = 1;
  string error_message = 2;
}